@@ -183,8 +183,8 @@ std::vector<std::string> StartUpArgs::buildArgs() {
     if (dpiAware) {
         args.push_back("-dpiAware");
     }
-    if (!hideNewWindows) {
-        args.push_back("-dontHideNewWindows");
+    if (showWindowImmediately) {
+        args.push_back("-showWindowImmediately");
     }
     if (cpuAffinity) {
         args.push_back("-cpuAffinity");
@@ -219,6 +219,7 @@ bool StartUpArgs::apply() {
 #endif
     KSystem::pentiumLevel = this->pentiumLevel;
     KSystem::pollRate = this->pollRate;
+    KSystem::showWindowImmediately = this->showWindowImmediately;
 
     for (U32 f=0;f<nonExecFileFullPaths.size();f++) {
         FsFileNode::nonExecFileFullPaths.insert(nonExecFileFullPaths[f]);
@@ -571,8 +572,8 @@ bool StartUpArgs::parseStartupArgs(int argc, const char **argv) {
             }
         } else if (!strcmp(argv[i], "-dpiAware")) {
             dpiAware = true;
-        } else if (!strcmp(argv[i], "-dontHideNewWindows")) {
-            hideNewWindows = false;
+        } else if (!strcmp(argv[i], "-showWindowImmediately")) {
+            showWindowImmediately = true;
         }
         else if (!strcmp(argv[i], "-pollRate")) {
             this->pollRate = atoi(argv[i + 1]);
